force-app/main/default/objects/custom_create89__c/custom_create89__c.object-meta.xml
<CustomObject>
    <label>Custom created object89</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects89</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>