force-app/main/default/objects/custom_create89__c/fields/custom_create_89field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_89field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 89field545</label>
    <type>Checkbox</type>
</CustomField>